--- a/src/pages/Products.css
+++ b/src/pages/Products.css
@@ -13,7 +13,7 @@
 .productsbanner{
     width: 100%;
     height: 30rem;
-    background: url(/Allproducts/productspage/productsbanner.avif);
+    background: url(/productsbanner.avif);
     background-size: cover;
     background-position: center;
     display: flex;
