--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -7,6 +7,7 @@
     min-height: 100vh;
     background-color: white;
     user-select: none;
+    padding-top: 50px;
 }
 
 .loginform {
@@ -274,6 +275,7 @@ form input:focus::placeholder {
     .login {
         flex-direction: column;
         min-height: 100vh;
+        padding-top: 60px;
     }
     
     .loginform {
@@ -326,7 +328,7 @@ form input:focus::placeholder {
 /* Mobile phones */
 @media (max-width: 480px) {
     .login {
-        padding: 0;
+        padding-top: 50px;
     }
     
     .loginform {
