--- a/src/pages/Signup.css
+++ b/src/pages/Signup.css
@@ -7,6 +7,7 @@
     min-height: 100vh;
     background-color: white;
     user-select: none;
+    padding-top: 50px;
 }
 
 .loginform {
@@ -274,6 +275,7 @@ form input:focus::placeholder {
     .login {
         flex-direction: column;
         min-height: 100vh;
+        padding-top: 60px;
     }
     
     .loginform {
@@ -285,7 +287,7 @@ form input:focus::placeholder {
     
     .loginhero {
         width: 100%;
-        height: 40vh;
+        height: 25vh;
         order: 1;
     }
     
@@ -326,7 +328,7 @@ form input:focus::placeholder {
 /* Mobile phones */
 @media (max-width: 480px) {
     .login {
-        padding: 0;
+        padding-top: 50px;
     }
     
     .loginform {
@@ -334,7 +336,7 @@ form input:focus::placeholder {
     }
     
     .loginhero {
-        height: 30vh;
+        height: 15vh;
     }
     
     .loginform h1 {
